# ros2_demo

./: README.md
apriltags_ros/apriltags/: CMakeLists.txt  package.xml
apriltags_ros/apriltags_ros/: CMakeLists.txt  package.xml
apriltags_ros/apriltags_ros/include/apriltags_ros/: apriltag_detector.h
apriltags_ros/apriltags_ros/src/: apriltag_detector.cpp  apriltag_detector_node.cpp  test_sub2.cpp
mover/: CMakeLists.txt  package.xml
mover/src/: mover.cpp  please_move.cpp
rclcpp/src/rclcpp/: node.cpp
rodi_msgs/: CMakeLists.txt  package.xml
rodi_msgs/msg/: Buzzer.msg  GroundReflectance.msg
ros2_demo/: CMakeLists.txt
ros2_demo/launch/: camera.launch  demo.py
ros2_demo/src/: driver.cpp  please_move.cpp  test_sub.cpp
rosdi_ws2/: .gitignore  http_rodi_transport.py  overridable_action.py  package.xml  remote_rodi_api.py  rodi_api.py  rodi_node.py  rodi_transport.py  rosdi_ws.py  setup.cfg  setup.py  socket_rodi_transport.py  transport.py
rosdi_ws2/examples/: obstacles_avoider.py  obstacles_avoider_launcher.py
