<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>ros2_demo</name>
  <version>0.0.0</version>
  <description>Move the robot forward when a message is recived.</description>
  <maintainer email="jonlucas@ekuthon.com">Lucas/Jon</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_export_depend>rmw</build_export_depend>

  <build_depend>rcl_interfaces</build_depend>
  <build_depend>rmw_implementation_cmake</build_depend>
  <build_depend>rosidl_generator_cpp</build_depend>
  <build_export_depend>rcl_interfaces</build_export_depend>
  <build_export_depend>rosidl_generator_cpp</build_export_depend>

  <depend>rcl</depend>
  <depend>rmw_implementation</depend>

  <exec_depend>ament_cmake</exec_depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>rmw</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
