<?xml version="1.0"?>
<package format="2">
  <name>apriltags</name>
  <version>0.1.2</version>
  <description>A catkin version of the C++ apriltags library</description>

  <maintainer email="mwills@wpi.edu">Mitchell Wills</maintainer>
  <author>Michael Kaess</author>
  <author>Hordur Johannson</author>

  <license>LGPL</license>

  <url type="website">http://people.csail.mit.edu/kaess/apriltags/</url>
  <url type="bugtracker">https://github.com/RIVeR-Lab/apriltags_ros/issues</url>
  <url type="repository">https://github.com/RIVeR-Lab/apriltags_ros</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>eigen</depend>
  <depend>cmake_modules</depend>
  <depend>libv4l-dev</depend>
  <depend>libopencv-dev</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
