<?xml version="1.0"?>
<package format="2">
  <name>apriltags_ros</name>
  <version>0.1.2</version>
  <description>A package that provides a ROS wrapper for the apriltags C++ package</description>

  <maintainer email="mwills@wpi.edu">Mitchell Wills</maintainer>
  <author>Mitchell Wills</author>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/apriltags_ros</url>
  <url type="bugtracker">https://github.com/RIVeR-Lab/apriltags_ros/issues</url>
  <url type="repository">https://github.com/RIVeR-Lab/apriltags_ros</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rcl_interfaces</build_depend>
  <build_depend>rmw_implementation_cmake</build_depend>
  <build_depend>rosidl_generator_cpp</build_depend>
  <build_export_depend>rcl_interfaces</build_export_depend>
  <build_export_depend>rosidl_generator_cpp</build_export_depend>

<!--
  <depend>apriltags</depend>
  <depend>image_transport</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf</depend>
  <depend>cv_bridge</depend>
  <depend>message_generation</depend>
  <depend>nodelet</depend>
  <depend>std_msgs</depend>
  <depend>cmake_modules</depend>
  -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
